--- a/data/resources/assets/craftingpp/lang/zh_cn.json
+++ b/data/resources/assets/craftingpp/lang/zh_cn.json
@@ -565,12 +565,12 @@
 
 	"The":"§a原版模组《更多的合成》已成功加载,",
 	"resourcepack":"版本",
-	"does":"§a1.9-m04d22§a.",
+	"does":"§a1.9§a.",
 	"not":"§a更多内容请",
 	"Install":"§e点击此处进入wiki.",
 	"correctly":"§a作者:",
 	"or":"§aruhuasiyu,",
-	"Launch":"§aRubberTree",
+	"Launch":"§aRubberTree 等",
 	
 	"title.actionbar.fat":"§6[Crafting++]§a 你的体重指数为",
 	"title.actionbar.fat0":"，过瘦",
