--- a/data/resources/assets/craftingpp/lang/zh_tw.json
+++ b/data/resources/assets/craftingpp/lang/zh_tw.json
@@ -565,12 +565,12 @@
 
 	"The":"§a原版模組《更多的合成》已成功加載,",
 	"resourcepack":"版本",
-	"does":"§a1.9-m04d22§a.",
+	"does":"§a1.9§a.",
 	"not":"§a更多內容請",
 	"Install":"§e點擊此處進入wiki.",
 	"correctly":"§a作者:",
 	"or":"§aruhuasiyu,",
-	"Launch":"§aRubberTree",
+	"Launch":"§aRubberTree 等",
 
 	"title.actionbar.fat":"§6[Crafting++]§a 你的體重指數為",
 	"title.actionbar.fat0":"，過瘦",
