--- a/data/resources/assets/craftingpp/lang/zh_cn.json
+++ b/data/resources/assets/craftingpp/lang/zh_cn.json
@@ -565,7 +565,7 @@
 
 	"The":"§a原版模组《更多的合成》已成功加载,",
 	"resourcepack":"版本",
-	"does":"§a1.9§a.",
+	"does":"§a1.9.1§a.",
 	"not":"§a更多内容请",
 	"Install":"§e点击此处进入wiki.",
 	"correctly":"§a作者:",
@@ -705,69 +705,5 @@
 	
 	"item.minecraft.potion.effect.empty": "§r神秘药水",
 	"item.minecraft.splash_potion.effect.empty": "§r喷溅型神秘药水",
-	"item.minecraft.lingering_potion.effect.empty": "§r滞留型神秘药水",	
-	"block.minecraft.cobblestone_wall": "竖圆石台阶",
-	"block.minecraft.mossy_cobblestone_wall": "竖苔石台阶",
-	"block.minecraft.brick_wall": "竖砖台阶",
-	"block.minecraft.prismarine_wall": "竖海晶砖台阶",
-	"block.minecraft.red_sandstone_wall": "竖红砂岩台阶",
-	"block.minecraft.mossy_stone_brick_wall": "竖苔石砖台阶",
-	"block.minecraft.granite_wall": "竖花岗岩台阶",
-	"block.minecraft.stone_brick_wall": "竖石砖台阶",
-	"block.minecraft.nether_brick_wall": "竖地狱砖台阶",
-	"block.minecraft.andesite_wall": "竖安山岩台阶",
-	"block.minecraft.red_nether_brick_wall": "竖红色地狱砖台阶",
-	"block.minecraft.sandstone_wall": "竖砂岩台阶",
-	"block.minecraft.end_stone_brick_wall": "竖末地石砖台阶",
-	"block.minecraft.diorite_wall": "竖闪长岩台阶",
-	"entity.minecraft.tropical_fish.predefined.0":"§7海葵鱼",
-	"entity.minecraft.tropical_fish.predefined.1":"§7黑刺尾鲷",
-	"entity.minecraft.tropical_fish.predefined.2":"§7蓝刺尾鲷",
-	"entity.minecraft.tropical_fish.predefined.3":"§7蝴蝶鱼",
-	"entity.minecraft.tropical_fish.predefined.4":"§7丽鱼",
-	"entity.minecraft.tropical_fish.predefined.5":"§7小丑鱼",
-	"entity.minecraft.tropical_fish.predefined.6":"§7五彩搏鱼",
-	"entity.minecraft.tropical_fish.predefined.7":"§7绣雀鲷",
-	"entity.minecraft.tropical_fish.predefined.8":"§7川纹笛鲷",
-	"entity.minecraft.tropical_fish.predefined.9":"§7拟羊鱼",
-	"entity.minecraft.tropical_fish.predefined.10":"§7镰鱼",
-	"entity.minecraft.tropical_fish.predefined.11":"§7华丽蝴蝶鱼",
-	"entity.minecraft.tropical_fish.predefined.12":"§7鹦嘴鱼",
-	"entity.minecraft.tropical_fish.predefined.13":"§7额斑刺蝶鱼",
-	"entity.minecraft.tropical_fish.predefined.14":"§7红丽鱼",
-	"entity.minecraft.tropical_fish.predefined.15":"§7红唇真蛇鳚",
-	"entity.minecraft.tropical_fish.predefined.16":"§7红边笛鲷",
-	"entity.minecraft.tropical_fish.predefined.17":"§7马鲅",
-	"entity.minecraft.tropical_fish.predefined.18":"§7白条双锯鱼",
-	"entity.minecraft.tropical_fish.predefined.19":"§7鳞鲀",
-	"entity.minecraft.tropical_fish.predefined.20":"§7高鳍鹦嘴鱼",
-	"entity.minecraft.tropical_fish.predefined.21":"§7黄刺尾鲷",
-	"entity.minecraft.tropical_fish.type.flopper":"§7飞翼",
-	"entity.minecraft.tropical_fish.type.stripey":"§7条纹",
-	"entity.minecraft.tropical_fish.type.glitter":"§7闪鳞",
-	"entity.minecraft.tropical_fish.type.blockfish":"§7方身",
-	"entity.minecraft.tropical_fish.type.betty":"§7背蒂",
-	"entity.minecraft.tropical_fish.type.clayfish":"§7陶鱼",
-	"entity.minecraft.tropical_fish.type.kob":"§7石首",
-	"entity.minecraft.tropical_fish.type.sunstreak":"§7日纹",
-	"entity.minecraft.tropical_fish.type.snooper":"§7窥伺",
-	"entity.minecraft.tropical_fish.type.dasher":"§7速跃",
-	"entity.minecraft.tropical_fish.type.brinely":"§7咸水",
-	"entity.minecraft.tropical_fish.type.spotty":"§7多斑",
-	"color.minecraft.white":"§7白色",
-	"color.minecraft.orange":"§7橙色",
-	"color.minecraft.magenta":"§7品红色",
-	"color.minecraft.light_blue":"§7天蓝色",
-	"color.minecraft.yellow":"§7黄色",
-	"color.minecraft.lime":"§7黄绿色",
-	"color.minecraft.pink":"§7玫瑰色",
-	"color.minecraft.gray":"§7灰色",
-	"color.minecraft.light_gray":"§7银色",
-	"color.minecraft.cyan":"§7蓝绿色",
-	"color.minecraft.purple":"§7紫红色",
-	"color.minecraft.blue":"§7蓝色",
-	"color.minecraft.brown":"§7棕色",
-	"color.minecraft.green":"§7绿色",
-	"color.minecraft.red":"§7红色",
-	"color.minecraft.black":"§7黑色"
+	"item.minecraft.lingering_potion.effect.empty": "§r滞留型神秘药水"
 }
