--- a/data/resources/assets/craftingpp/lang/zh_tw.json
+++ b/data/resources/assets/craftingpp/lang/zh_tw.json
@@ -565,7 +565,7 @@
 
 	"The":"§a原版模組《更多的合成》已成功加載,",
 	"resourcepack":"版本",
-	"does":"§a1.9§a.",
+	"does":"§a1.9.1§a.",
 	"not":"§a更多內容請",
 	"Install":"§e點擊此處進入wiki.",
 	"correctly":"§a作者:",
@@ -705,69 +705,5 @@
 	
 	"item.minecraft.potion.effect.empty": "§r神秘藥水",
 	"item.minecraft.splash_potion.effect.empty": "§r噴濺型神秘藥水",
-	"item.minecraft.lingering_potion.effect.empty": "§r滯留型神秘藥水",	
-	"block.minecraft.cobblestone_wall": "豎圓石臺階",
-	"block.minecraft.mossy_cobblestone_wall": "豎苔石臺階",
-	"block.minecraft.brick_wall": "豎磚臺階",
-	"block.minecraft.prismarine_wall": "豎海晶磚臺階",
-	"block.minecraft.red_sandstone_wall": "豎紅砂巖臺階",
-	"block.minecraft.mossy_stone_brick_wall": "豎苔石磚臺階",
-	"block.minecraft.granite_wall": "豎花崗巖臺階",
-	"block.minecraft.stone_brick_wall": "豎石磚臺階",
-	"block.minecraft.nether_brick_wall": "豎地獄磚臺階",
-	"block.minecraft.andesite_wall": "豎安山巖臺階",
-	"block.minecraft.red_nether_brick_wall": "豎紅色地獄磚臺階",
-	"block.minecraft.sandstone_wall": "豎砂巖臺階",
-	"block.minecraft.end_stone_brick_wall": "豎末地石磚臺階",
-	"block.minecraft.diorite_wall": "豎閃長巖臺階",
-	"entity.minecraft.tropical_fish.predefined.0":"§7海葵魚",
-	"entity.minecraft.tropical_fish.predefined.1":"§7黑刺尾鯛",
-	"entity.minecraft.tropical_fish.predefined.2":"§7藍刺尾鯛",
-	"entity.minecraft.tropical_fish.predefined.3":"§7蝴蝶魚",
-	"entity.minecraft.tropical_fish.predefined.4":"§7慈鯛",
-	"entity.minecraft.tropical_fish.predefined.5":"§7小丑魚",
-	"entity.minecraft.tropical_fish.predefined.6":"§7五彩搏魚",
-	"entity.minecraft.tropical_fish.predefined.7":"§7紅黃繡雀鯛",
-	"entity.minecraft.tropical_fish.predefined.8":"§7川紋笛鯛",
-	"entity.minecraft.tropical_fish.predefined.9":"§7鬚鯛",
-	"entity.minecraft.tropical_fish.predefined.10":"§7角蝶魚",
-	"entity.minecraft.tropical_fish.predefined.11":"§7華麗蝴蝶魚",
-	"entity.minecraft.tropical_fish.predefined.12":"§7鸚哥魚",
-	"entity.minecraft.tropical_fish.predefined.13":"§7額斑刺蝶魚",
-	"entity.minecraft.tropical_fish.predefined.14":"§7赤慈鯛",
-	"entity.minecraft.tropical_fish.predefined.15":"§7紅唇真蛇鳚",
-	"entity.minecraft.tropical_fish.predefined.16":"§7紅邊笛鯛",
-	"entity.minecraft.tropical_fish.predefined.17":"§7馬鮁",
-	"entity.minecraft.tropical_fish.predefined.18":"§7白條雙鋸魚",
-	"entity.minecraft.tropical_fish.predefined.19":"§7鱗鲀",
-	"entity.minecraft.tropical_fish.predefined.20":"§7高鰭鸚哥魚",
-	"entity.minecraft.tropical_fish.predefined.21":"§7黃高鰭刺尾魚",
-	"entity.minecraft.tropical_fish.type.flopper":"§7翅翼",
-	"entity.minecraft.tropical_fish.type.stripey":"§7條紋",
-	"entity.minecraft.tropical_fish.type.glitter":"§7閃魚",
-	"entity.minecraft.tropical_fish.type.blockfish":"§7方塊",
-	"entity.minecraft.tropical_fish.type.betty":"§7貝蒂",
-	"entity.minecraft.tropical_fish.type.clayfish":"§7黏土",
-	"entity.minecraft.tropical_fish.type.kob":"§7赤羚",
-	"entity.minecraft.tropical_fish.type.sunstreak":"§7日紋",
-	"entity.minecraft.tropical_fish.type.snooper":"§7藏礁",
-	"entity.minecraft.tropical_fish.type.dasher":"§7迅泳",
-	"entity.minecraft.tropical_fish.type.brinely":"§7迅泳",
-	"entity.minecraft.tropical_fish.type.spotty":"§7斑點",
-	"color.minecraft.white":"§7白色",
-	"color.minecraft.orange":"§7橙色",
-	"color.minecraft.magenta":"§7品紅色",
-	"color.minecraft.light_blue":"§7天藍色",
-	"color.minecraft.yellow":"§7黃色",
-	"color.minecraft.lime":"§7黃綠色",
-	"color.minecraft.pink":"§7玫瑰色",
-	"color.minecraft.gray":"§7灰色",
-	"color.minecraft.light_gray":"§7銀色",
-	"color.minecraft.cyan":"§7藍綠色",
-	"color.minecraft.purple":"§7紫紅色",
-	"color.minecraft.blue":"§7藍色",
-	"color.minecraft.brown":"§7棕色",
-	"color.minecraft.green":"§7綠色",
-	"color.minecraft.red":"§7紅色",
-	"color.minecraft.black":"§7黑色"
+	"item.minecraft.lingering_potion.effect.empty": "§r滯留型神秘藥水"
 }
