--- a/data/craftingpp_resources/assets/cpp/lang/zh_tw.json
+++ b/data/craftingpp_resources/assets/cpp/lang/zh_tw.json
@@ -603,8 +603,8 @@
 	"advancements.cpp.red_horn.description":"跑的比誰都快",
 
 	"info.cpp.load1":"§6[Crafting++] §r原版模組《更多的合成》已成功加載, 作者ruhuasiyu, RubberTree等. 更多內容請",
-	"info.cpp.load2":"§e點擊此處進入wiki.",
-	"info.cpp.load3":"§r資源包版本為 1.9.5, 數據包版本為",
+	"info.cpp.load2":"§e點擊此處進入wiki",
+	"info.cpp.load3":"§r. 資源包版本為 1.9.6, 數據包版本為",
 	"info.cpp.load4":"§r請檢查是否壹致.",
 
 	"title.actionbar.fat":"§6[Crafting++]§r 你的體重指數為",
