--- a/data/craftingpp_resources/assets/cpp/lang/en_us.json
+++ b/data/craftingpp_resources/assets/cpp/lang/en_us.json
@@ -244,16 +244,17 @@
 	"item.cpp.golem_warrior":"§bGolem Warrior",
 	"item.cpp.golem_herder":"§bGolem Herder",
 	
-	"lore.cpp.shield.china_flag":"§7China Flag",
-	"lore.cpp.shield.usa_flag":"§7USA Flag",
-	"lore.cpp.shield.russia_flag":"§7Russia Flag",
-	"lore.cpp.shield.uk_flag":"§7UK Flag",
-	"lore.cpp.shield.france_flag":"§7France Flag",
-	"lore.cpp.shield.bilibili":"§7Bilibili Logo",
-	"lore.cpp.shield.github":"§7Github Logo",
-	"lore.cpp.shield.mcmod":"§7MCmod Logo",
-	"lore.cpp.shield.tcp":"§7TCP Logo",
-	"lore.cpp.shield.cbl":"§7CBL Logo",
+	"item.cpp.china_flag":"§7China Flag",
+	"item.cpp.usa_flag":"§7USA Flag",
+	"item.cpp.russia_flag":"§7Russia Flag",
+	"item.cpp.uk_flag":"§7UK Flag",
+	"item.cpp.france_flag":"§7France Flag",
+	"item.cpp.bilibili_logo":"§7Bilibili Logo",
+	"item.cpp.github_logo":"§7Github Logo",
+	"item.cpp.mcmod_logo":"§7MCmod Logo",
+	"item.cpp.tcp_logo":"§7The Command Power Logo",
+	"item.cpp.cbl_logo":"§7Command Block Logic Logo",
+	"item.cpp.nf_logo":"§7Nuclear Fusion Logo",
 
 	"item.cpp.donkey":"§rRaw Donkey Meat",
 	"item.cpp.cooked_donkey":"§rCooked Donkey Meat",
@@ -604,7 +605,7 @@
 
 	"info.cpp.load1":"§6[Crafting++] §rCrafting++ is loaded. Authors: ruhuasiyu, RubberTree, etc. ",
 	"info.cpp.load2":"§eClick §eto §evisit §ethe §ewiki ",
-	"info.cpp.load3":"§rfor more informations. Resourcepack version 1.9.12, Datapack version ",
+	"info.cpp.load3":"§rfor more informations. Resourcepack version 1.9.13, Datapack version ",
 	"info.cpp.load4":" §rPlease check wheather they coincides.",
 
 	"title.actionbar.fat":"§6[Crafting++]§r Your weight index is ",
