--- a/data/craftingpp_resources/assets/cpp/lang/en_us.json
+++ b/data/craftingpp_resources/assets/cpp/lang/en_us.json
@@ -219,7 +219,7 @@
 	"item.cpp.time_checker.time18":"§6[Crafting++]§r Now is 18:00, the sun goes down.",
 	"item.cpp.time_checker.time00":"§6[Crafting++]§r Now is 00:00",
 	"item.cpp.origin_of_the_world":"§rOrigin of the World",
-	"item.cpp.origin_of_the_world.no_spawn":"§6[Crafting++]§r You have not set a rebirth point and will be teleported near (0,64,0)",
+	"item.cpp.origin_of_the_world.no_spawn":"§6[Crafting++]§r You have not set a rebirth point and will be teleported near the world spawn point.",
 	"item.cpp.compressor":"§rCompressor",
 	"item.cpp.elder_s_words":"§rElder's Words",
 	"item.cpp.coordinate_recorder":"§rCoordinate Recorder",
@@ -605,7 +605,7 @@
 
 	"info.cpp.load1":"§6[Crafting++] §rCrafting++ is loaded. Authors: ruhuasiyu, RubberTree, etc. ",
 	"info.cpp.load2":"§eClick §eto §evisit §ethe §ewiki ",
-	"info.cpp.load3":"§rfor more informations. Resourcepack version 1.9.14, Datapack version ",
+	"info.cpp.load3":"§rfor more informations. Resourcepack version 1.9.15, Datapack version ",
 	"info.cpp.load4":" §rPlease check wheather they coincides.",
 
 	"title.actionbar.fat":"§6[Crafting++]§r Your weight index is ",
