--- a/data/craftingpp_resources/assets/cpp/lang/zh_cn.json
+++ b/data/craftingpp_resources/assets/cpp/lang/zh_cn.json
@@ -54,6 +54,7 @@
 	"item.cpp.endermite_head":"§e末影螨头",
 	"item.cpp.dolphin_head":"§e海豚头",
 	"item.cpp.zombie_horse_head":"§e僵尸马头",
+	"item.cpp.bee_head":"§e蜜蜂头",
 	
 	"item.cpp.cat_head.tabby":"§e虎斑猫头",
 	"item.cpp.cat_head.tuxedo":"§e西服猫头",
@@ -605,7 +606,7 @@
 
 	"info.cpp.load1":"§6[Crafting++] §r原版模组《更多的合成》已成功加载, 作者ruhuasiyu, RubberTree等. 更多内容请",
 	"info.cpp.load2":"§e点击此处进入wiki",
-	"info.cpp.load3":"§r. 资源包版本为 1.9.15, 数据包版本为",
+	"info.cpp.load3":"§r. 资源包版本为 1.9.16, 数据包版本为",
 	"info.cpp.load4":"§r请检查是否一致.",
 	
 	"title.actionbar.fat":"§6[Crafting++]§r 你的体重指数为",
