--- a/data/craftingpp_resources/assets/cpp/lang/en_us.json
+++ b/data/craftingpp_resources/assets/cpp/lang/en_us.json
@@ -341,6 +341,12 @@
 	"item.cpp.qingtuan":"§rQingtuan",
 	"item.cpp.sakura_mochi":"§rSakura Mochi",
 	"item.cpp.zongzi":"§rZongzi",
+	"item.cpp.zongzi.boiled_egg":"§eEgg Yolk",
+	"item.cpp.zongzi.chinese_date":"§eSHoney Dates",
+	"item.cpp.zongzi.cooked_porkchop":"§ePork",
+	"item.cpp.zongzi.salt":"§eSalty",
+	"item.cpp.zongzi.soda_water":"§eSoda",
+	"item.cpp.zongzi.honey_bottle":"§eHoney",
 	"item.cpp.sandwich":"§rSandwich",
 	"item.cpp.stargazy_pie":"§rStargazy Pie",
 	"lore.cpp.speed":"§9Speed (0:30)",
@@ -646,6 +652,8 @@
 	"advancements.cpp.gardener.description":"Plant a tree seedling",
 	"advancements.cpp.forgive.title":"§aGreen Hat",
 	"advancements.cpp.forgive.description":"§aSt.Patrick'sDay",
+	"advancements.cpp.flower_world.title":"Wanderland",
+	"advancements.cpp.flower_world.description":"§aEnter flower world",
 
 	"advancements.cpp.robber.title":"Robber",
 	"advancements.cpp.robber.description":"Anger of natives",
