--- a/data/craftingpp_resources/assets/cpp/lang/zh_meme.json
+++ b/data/craftingpp_resources/assets/cpp/lang/zh_meme.json
@@ -341,6 +341,12 @@
 	"item.cpp.qingtuan":"§r青团",
 	"item.cpp.sakura_mochi":"§r樱饼",
 	"item.cpp.zongzi":"§r粽子",
+	"item.cpp.zongzi.boiled_egg":"§e蛋黄馅",
+	"item.cpp.zongzi.chinese_date":"§e蜜枣馅",
+	"item.cpp.zongzi.cooked_porkchop":"§e猪肉馅",
+	"item.cpp.zongzi.salt":"§e咸味",
+	"item.cpp.zongzi.soda_water":"§e碱水味",
+	"item.cpp.zongzi.honey_bottle":"§e甜味",
 	"item.cpp.sandwich":"§r三明治",
 	"item.cpp.stargazy_pie":"§r仰望星空π",
 	"lore.cpp.speed":"§9Plash Speed (0:30)",
@@ -646,6 +652,8 @@
 	"advancements.cpp.gardener.description":"要想富, 少生孩子多种树",
 	"advancements.cpp.forgive.title":"§a当然是选择原谅她啦！",
 	"advancements.cpp.forgive.description":"§a戴上你的原谅帽",
+	"advancements.cpp.flower_world.title":"世外桃源",
+	"advancements.cpp.flower_world.description":"§a进入花花世界",
 
 	"advancements.cpp.robber.title":"装完逼还想跑？",
 	"advancements.cpp.robber.description":"土著的愤怒",
