--- a/data/craftingpp_resources/assets/cpp/lang/zh_tw.json
+++ b/data/craftingpp_resources/assets/cpp/lang/zh_tw.json
@@ -341,6 +341,12 @@
 	"item.cpp.qingtuan":"§r青團",
 	"item.cpp.sakura_mochi":"§r櫻餅",
 	"item.cpp.zongzi":"§r粽子",
+	"item.cpp.zongzi.boiled_egg":"§e蛋黃餡",
+	"item.cpp.zongzi.chinese_date":"§e蜜棗餡",
+	"item.cpp.zongzi.cooked_porkchop":"§e豬肉餡",
+	"item.cpp.zongzi.salt":"§e鹹味",
+	"item.cpp.zongzi.soda_water":"§e堿水味",
+	"item.cpp.zongzi.honey_bottle":"§e甜味",
 	"item.cpp.sandwich":"§r三明治",
 	"item.cpp.stargazy_pie":"§r仰望星空派",
 	"lore.cpp.speed":"§9速度 (0:30)",
@@ -646,6 +652,8 @@
 	"advancements.cpp.gardener.description":"要想富, 少生孩子多種樹",
 	"advancements.cpp.forgive.title":"§a當然是選擇原諒她啦！",
 	"advancements.cpp.forgive.description":"§a戴上妳的原諒帽",
+	"advancements.cpp.flower_world.title":"世外桃源",
+	"advancements.cpp.flower_world.description":"§a進入花花世界",
 
 	"advancements.cpp.robber.title":"裝完逼還想跑？",
 	"advancements.cpp.robber.description":"土著的憤怒",
